[package]
name = "bybe"
version = "2.6.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.85.1"

description = "Beyond Your Bestiary Explorer (BYBE) is a web service that provides tools to help Pathfinder 2e Game Masters."
readme = "README.md"
homepage = "https://backbybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
keywords = ["webservice", "pathfinder"]
publish = false

build = "build/main.rs"

[lib]
name = "bybe"
path = "src/lib.rs"

[[bin]]
name = "bybe"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = {level = "allow", priority = 2}
module_name_repetitions = {level = "allow", priority = 2}
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = {level = "allow", priority = 2}
cast_precision_loss = {level = "allow", priority = 2}

future_not_send = {level = "allow", priority = 2}

pedantic = {level = "warn", priority = 1}
nursery = {level= "warn", priority = 1}
# unwrap_used = {level = "warn", priority = 1}


[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"

utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "reqwest"] }

sqlx = { version = "0.8.3", features = ["runtime-async-std", "sqlite"] }
cached = { version = "0.55.1", features = ["async"] }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version="0.27.1", features = ["derive"]}
fastrand = "2.3.0"
counter = "0.6.0"
ordered-float = { version = "5", features = ["serde"]}
num-traits = "0.2.19"
maplit = "1.0.2"
itertools = "0.14.0"

regex = "1.11.1"

dotenvy = "0.15.7"

env_logger = "0.11.7"
log = "0.4.27"
once_cell = "1.21.3"
once = "0.3.4"

[build-dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread", "rt"]}
anyhow = "1.0"
sqlx = {version = "0.8.3", features = ["runtime-async-std", "sqlite"]}
dotenvy = "0.15.7"

[dev-dependencies]
rstest = "0.25.0"
