
[package]
name = "bybe"
version = "4.0.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.88.0"

description = "Beyond Your Bestiary Explorer (BYBE) is a web service that provides tools to help Pathfinder/Starfinder 2e Game Masters."
readme = "README.md"
homepage = "https://backbybe.fly.dev/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
keywords = ["webservice", "pathfinder", "starfinder"]
publish = false

build = "build/main.rs"

[lib]
name = "bybe"
path = "src/lib.rs"

[[bin]]
name = "bybe"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

# pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
# unwrap_used = {level = "warn", priority = 1}


[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"

utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "reqwest"] }

sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }
cached = { version = "0.56.0", features = ["async"] }

nomina = { version = "0.0.5", git = "https://github.com/rakuja/nomina.git" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
nanorand = "0.8.0"
counter = "0.7.0"
ordered-float = { version = "5", features = ["serde"] }
num-traits = "0.2"
maplit = "1.0"
itertools = "0.14"

base64ct = { version = "1.8.0", features = ["alloc"] }
postcard = { version = "1.1.3", features = ["alloc"] }
async-compression = {version = "0.4.32", features = ["zstd", "tokio"]}
tokio = { version = "1.47.1" }

regex = "1.11"

dotenvy = "0.15"

env_logger = "0.11"
log = "0.4"
futures = "0.3"


[build-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }
dotenvy = "0.15.7"

[dev-dependencies]
rstest = "0.26.1"
