
[workspace]
resolver = "2"

[package]
name = "bybe"
version = "4.1.0"
authors = ["RakuJa"]

# Compiler info
edition = "2024"
rust-version = "1.94.1"

description = "Beyond Your Bestiary Explorer (BYBE) is a web service that provides tools to help Pathfinder/Starfinder 2e Game Masters."
readme = "README.md"
homepage = "https://api.bybe.app/"
repository = "https://github.com/RakuJa/BYBE"
license = "MIT"
keywords = ["webservice", "pathfinder", "starfinder"]
publish = false

[lib]
name = "bybe"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
deprecated = "allow"

[lints.clippy]
struct_field_names = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
# We are ok with losing some data without wrapping. We are not ok with wrapping
# Ex: 128.12 => 128 is ok, 128 => 0 is not.
cast_possible_truncation = { level = "allow", priority = 2 }
cast_precision_loss = { level = "allow", priority = 2 }

future_not_send = { level = "allow", priority = 2 }

# pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
# unwrap_used = {level = "warn", priority = 1}


[dependencies]
async-trait = "0.1.89"
utoipa = { version = "5.4.0" }

sqlx = { version = "0.9.0", features = ["runtime-async-std", "sqlite"] }
cached = { version = "1.1.0", features = ["async"] }

nomina = { version = "0.0.5", git = "https://github.com/rakuja/nomina.git" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
nanorand = "0.8.0"
counter = "0.7"
ordered-float = { version = "5", features = ["serde"] }
num-traits = "0.2"
maplit = "1.0"
itertools = "0.14"

base64ct = { version = "1.8.3", features = ["alloc"] }
postcard = { version = "1.1.3", features = ["alloc"] }
async-compression = {version = "0.4", features = ["zstd", "tokio"]}
tokio = { version = "1.50", features = ["io-util"] }
futures = "0.3"

regex = "1.12"

tracing = "0.1.44"


[build-dependencies]
anyhow = "1.0"

[dev-dependencies]
rstest = "0.26.1"
